[package]
name = "axum-redis-example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.24.1", features = ["full"] }
redis = "0.26.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tower-http = { version = "0.5.2", features = ["cors"] }
dotenv = "0.15.0"
